# ResQ

./: .gitignore  README.md
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
backend/apps/accounts/: admin.py  apps.py  models.py  selectors.py  serializers.py  signals.py  urls.py  views.py
backend/apps/ai_matching/: apps.py  interfaces.py
backend/apps/ambulance/: admin.py  models.py  urls.py
backend/apps/analytics/: selectors.py  urls.py  views.py
backend/apps/audit_logs/: admin.py  models.py  selectors.py  serializers.py  urls.py  views.py
backend/apps/blood_donation/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: admin.py  exceptions.py  geo.py  middleware.py  models.py  native.py  pagination.py  permissions.py  request_context.py  sms.py
backend/apps/disaster_mode/: admin.py  apps.py  consumers.py  models.py  routing.py  selectors.py  serializers.py  signals.py  urls.py  views.py
backend/apps/hospitals/: admin.py  apps.py  models.py  urls.py  (+2 more)
backend/config/: asgi.py  celery.py  urls.py
backend/native_engine/: CMakeLists.txt  README.md
backend/native_engine/include/: resq_native.h
backend/native_engine/src/: crypto.c  geo.c  image.c  qr.c
backend/native_engine/tests/: benchmark.py
backend/requirements/: base.txt  dev.txt
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ER_DIAGRAM.md  ROADMAP.md
web/: README.md  package-lock.json  package.json  vitest.config.mts  vitest.setup.ts
(+202 files in other folders)
